# kampela-firmware

./: .gitignore  README.md
kampela/: Cargo.toml  Readme.md  heap.x  rust-toolchain.toml
kampela-display-common/: Cargo.toml
kampela-display-common/src/: display_def.rs
kampela-screen-calibration/: Cargo.toml  binarize.sh
kampela-screen-calibration/src/: main.rs
kampela-system/: Cargo.toml
kampela-system/src/: debug_display.rs  draw.rs  flash_mnemonic.rs  init.rs  lib.rs  parallel.rs
kampela-system/src/devices/: display copy2.rs  display.rs  display_transmission.rs  flash.rs  mod.rs  power.rs  psram.rs  se_aes_gcm.rs  touch.rs
kampela-system/src/peripherals/: gpio_pins.rs  i2c.rs  ldma.rs  usart.rs
kampela-ui/: Cargo.toml
kampela-ui/simulator/: Cargo.toml
kampela-ui/simulator/src/: main.rs
kampela-ui/src/: address.rs  backup.rs  dialog.rs  display_def.rs  lib.rs  main.rs  message.rs  non_printable_list.rs  pin.rs  platform.rs  qr.rs  seed_entry.rs  seed_entry_t9.rs  test.rs  transaction.rs  uistate.rs
kampela-ui/src/nav_bar/: nav_bar.rs  nav_button.rs
kampela-ui/src/pin/: pin.rs  pinbutton.rs  pindots.rs  pinpad.rs
kampela-ui/src/seed_entry/: entry.rs  key.rs  keyboard.rs  phrase.rs  proposal.rs  seed_entry.rs
kampela-ui/src/widget/: button.rs  view.rs
kampela-ui/src/widget/nav_bar/: nav_bar.rs  nav_button.rs
kampela/src/: main.rs  nfc.rs  ui.rs
kampela_experiments_efm32pg23/efm32pg23_fix/src/: lib.rs
kampela_experiments_efm32pg23/patches/: Cargo.toml
kampela_experiments_efm32pg23/patches/src/: phrase.rs
kolibri/src/: uistate.rs
mnemonic-external/: Cargo.toml  README.md
mnemonic-external/.github/: dependabot.yml
mnemonic-external/.github/workflows/: rust-cargo-deny.yml  rust-clippy.yml  rust-fmt.yml  rust-test.yml
mnemonic-external/src/: error.rs  external.rs  internal.rs  lib.rs  tests.rs
test_transaction_qrs/: polkadot_utility_remarks  westend_balance_transfer  westend_staking
