[package]
edition = "2021"
name = "screen-calibration-app"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
efm32pg23_fix = {path = "../kampela_experiments_efm32pg23/efm32pg23_fix", features = ["critical-section", "rt"]}
embedded-alloc = "0.5.0" # embedded-alloc required nightly!
embedded-graphics = "0.7.1"
kampela-system = { path = "../kampela-system" }
kampela-display-common = { path = "../kampela-display-common" }
kolibri = {path = "../kolibri", default-features = false}

[profile.release]
codegen-units = 1
lto = true
