[package]
name = "kampela-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-text = {version = "0.6.6", default-features = false}
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
embedded-graphics-simulator = { version = "0.3.0", optional = true }
ux = { version = "0.1.3", default_features = false }
rand_core = { version = "0.6.4", default-features = false }
rand = { version = "0.8.5", default_features = false }
schnorrkel = {version = "0.11.2", default-features = false}
lazy_static = { version = "1.4.0", default_features = false }
patches = { path = "../kampela_experiments_efm32pg23/patches" }
kampela-display-common = { path = "../kampela-display-common" }
clap = { version = "4.2.1", features = ["derive"], optional = true }
qrcodegen-noheap = {git = "https://github.com/Slesarew/QR-Code-generator", branch = "patch-1"}
pbkdf2 = {version = "0.11.0", default-features = false}
sha2 = {version = "0.10.6", default-features = false}
hmac = "0.12.1"
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
sp-core = {version = "12.0.0", default-features = false, features = ["full_crypto"]}
substrate_parser = { git = "https://github.com/Alzymologist/substrate-parser", default-features = false, features = ["embed-display"], rev = "632f621a595fa7161a3352c1f6a05ffcc5f2dcc8" }

[features]
default = ["std"]
std = ["embedded-graphics-simulator", "rand/default", "clap"]
embed = ["lazy_static/spin_no_std"]
