[package]
name = "kampela-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-text = {version = "0.5.0", default-features = false}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
kampela-display-common = { path = "../kampela-display-common" }
lazy_static = { version = "1.4.0", default_features = false }
mnemonic-external = {git = "https://github.com/Alzymologist/mnemonic-external", default-features = false, features = ["sufficient-memory"], rev = "bbee08893d8d441dad00e616fac36409e5550b41"}
qrcodegen-no-heap = { version = "1.8.1" }
rand = { version = "0.8.5", default_features = false }
substrate-crypto-light = {git = "https://github.com/Alzymologist/substrate-crypto-light", default-features = false, features = ["sr25519"]}
substrate_parser = {git = "https://github.com/Alzymologist/substrate-parser", default-features = false, rev = "65de6a4fe207a64f9857247af4e9f7509fa6de4f"}
ux = { version = "0.1.3", default_features = false }

[features]
default = ["std"]
std = ["rand/default"]
embed = ["lazy_static/spin_no_std"]
