[package]
name = "kampela-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
kampela-display-common = { path = "../kampela-display-common" }
lazy_static = { version = "1.4.0", default_features = false }
mnemonic-external = { version = "0.1.0", default-features = false }
qrcodegen-no-heap = { version = "1.8.1" }
rand = { version = "0.8.5", default_features = false }
substrate-crypto-light = { version = "0.1.0", default-features = false, features = ["sr25519"] }
substrate_parser = { version = "0.7.0", default-features = false}
#ux = { version = "0.1.3", default_features = false }

[features]
default = ["std"]
std = ["rand/default"]
embed = ["lazy_static/spin_no_std"]
