[package]
name = "mnemonic-external"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
kampela-system = { path = "../kampela-system", optional = true }

thiserror = { version = "1", optional = true }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std", "sufficient-memory"]
std = ["thiserror"]
sufficient-memory = []
embed = ["kampela-system"]

[lib]
name = "mnemonic_external"
crate-type = ["lib"]
