[package]
name = "kampela-ui-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
embedded-graphics-core = "0.3.3"
embedded-graphics-simulator = { version = "0.3.0" }
mnemonic-external = {git = "https://github.com/Alzymologist/mnemonic-external", features = ["sufficient-memory"]}
substrate-crypto-light = {git = "https://github.com/Alzymologist/substrate-crypto-light", features = ["sr25519"]}

kampela-ui = {path = "../"}
rand = { version = "0.8.5" }
